--- a/content/data/config.json
+++ b/content/data/config.json
@@ -3,7 +3,7 @@
     "path_prefix": "/",
     "description": "An ultra customizable generic theme for Stackbit",
     "header": {
-        "title": "Starter",
+        "title": "Gem State Media",
         "has_nav": true,
         "nav_links": [
             {
