--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Stackbit Starter Theme",
+    "title": "Gem State Media - Photo",
     "path_prefix": "/",
     "description": "An ultra customizable generic theme for Stackbit",
     "header": {
