config.json: updated description

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,7 +1,7 @@
 {
     "title": "Gem State Media - Photo & Video For Real Estate",
     "path_prefix": "/",
-    "description": "An ultra customizable generic theme for Stackbit",
+    "description": "Gem State Media provides ",
     "header": {
         "title": "Gem State Media",
         "has_nav": true,
