config.json: updated description

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,7 +1,7 @@
 {
     "title": "Gem State Media - Photo & Video For Real Estate",
     "path_prefix": "/",
-    "description": "Gem State Media provides professional photography and video services for ",
+    "description": "Gem State Media provides professional photography and video services for Real Estate professionals.",
     "header": {
         "title": "Gem State Media",
         "has_nav": true,
