--- a/content/data/config.json
+++ b/content/data/config.json
@@ -32,7 +32,7 @@
                 "style": "primary"
             },
             {
-                "label": "lorem-ipsum",
+                "label": "Gallery",
                 "url": "lorem-ipsum",
                 "style": "link",
                 "new_window": false,
