--- a/content/data/config.json
+++ b/content/data/config.json
@@ -33,7 +33,7 @@
             },
             {
                 "label": "Gallery",
-                "url": "lorem-ipsum",
+                "url": "https://gallery.gemstatemedia.com/Real-Estate",
                 "style": "link",
                 "new_window": false,
                 "type": "action"
