--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sentry/react": "^5.29.2",
+    "@sentry/tracing": "^5.29.2",
     "babel-runtime": "^6.26.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
