--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sentry/browser": "^5.15.5",
+    "@sentry/node": "^5.15.5",
     "@sentry/react": "^5.29.2",
     "@sentry/tracing": "^5.29.2",
+    "@sentry/webpack-plugin": "^1.11.1",
+    "@zeit/next-source-maps": "^0.0.3",
     "babel-runtime": "^6.26.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
