config.json: updated nav_links in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -37,6 +37,13 @@
                 "label": "Contact Us",
                 "url": "/contact",
                 "style": "primary"
+            },
+            {
+                "label": "lorem-ipsum",
+                "url": "lorem-ipsum",
+                "style": "link",
+                "new_window": false,
+                "type": "action"
             }
         ]
     },
