config.json: updated url in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -40,7 +40,7 @@
             },
             {
                 "label": "Home",
-                "url": "lorem-ipsum",
+                "url": "/",
                 "style": "link",
                 "new_window": false,
                 "type": "action"
