dianne-ameter.yaml: updated first_name

--- a/content/data/team/dianne-ameter.yaml
+++ b/content/data/team/dianne-ameter.yaml
@@ -1,6 +1,6 @@
 id: paul-cushing
 link: blog/author/paul-cushing
-first_name: Dianne
+first_name: Paul
 last_name: Ameter
 photo: images/dianne-ameter.jpg
 bio: >-
