--- a/content/data/team/dianne-ameter.yaml
+++ b/content/data/team/dianne-ameter.yaml
@@ -1,7 +1,7 @@
 id: paul-cushing
 link: blog/author/paul-cushing
 first_name: Paul
-last_name: Ameter
+last_name: Cushing
 photo: images/dianne-ameter.jpg
 bio: >-
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nisl ligula,
