Updating team and posts

--- a/content/data/team/paul-cushing.yaml
+++ b/content/data/team/paul-cushing.yaml
@@ -2,6 +2,6 @@ id: paul-cushing
 link: blog/author/paul-cushing
 first_name: Paul
 last_name: Cushing
-photo: images/dianne-ameter.jpg
+photo: images/paul-cushing.jpg
 bio: >-
   Paul Cushing is the owner/photographer of Gem State Media.
