Configure gallery for Stackbit

--- a/content/data/galleries/mission-pointe.yaml
+++ b/content/data/galleries/mission-pointe.yaml
@@ -1,7 +1,8 @@
 id: mission-pointe
+title: Mission Pointe
 images:
- - images/MissionPointe-1.jpg
- - images/MissionPointe-1.jpg
- - images/MissionPointe-1.jpg
- - images/MissionPointe-1.jpg
- - images/MissionPointe-1.jpg
+  - images/MissionPointe-1.jpg
+  - images/MissionPointe-1.jpg
+  - images/MissionPointe-1.jpg
+  - images/MissionPointe-1.jpg
+  - images/MissionPointe-1.jpg
