--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -14,21 +14,21 @@ logicFields:
 pageData:
   - pagePath: /
     initialExpandedPaths:
-      - '[0]'
-      - '[0].fields.title'
-      - '[0].fields.sections'
-      - '[0].fields.sections.items[0]'
-      - '[0].fields.sections.items[0].fields.title'
-      - '[0].fields.sections.items[0].fields.content'
-      - '[0].fields.sections.items[1]'
-      - '[0].fields.sections.items[1].fields.title'
-      - '[0].fields.sections.items[1].fields.subtitle'
-      - '[0].fields.sections.items[1].fields.features'
-      - '[0].fields.sections.items[0].fields.actions'
-      - '[0].fields.sections.items[0].fields.actions.items[0]'
-      - '[0].fields.sections.items[0].fields.actions.items[0].fields.label'
-      - '[1]'
-      - '[1].fields.palette'
+      - "[0]"
+      - "[0].fields.title"
+      - "[0].fields.sections"
+      - "[0].fields.sections.items[0]"
+      - "[0].fields.sections.items[0].fields.title"
+      - "[0].fields.sections.items[0].fields.content"
+      - "[0].fields.sections.items[1]"
+      - "[0].fields.sections.items[1].fields.title"
+      - "[0].fields.sections.items[1].fields.subtitle"
+      - "[0].fields.sections.items[1].fields.features"
+      - "[0].fields.sections.items[0].fields.actions"
+      - "[0].fields.sections.items[0].fields.actions.items[0]"
+      - "[0].fields.sections.items[0].fields.actions.items[0].fields.label"
+      - "[1]"
+      - "[1].fields.palette"
 models:
   config:
     type: data
@@ -187,7 +187,7 @@ models:
       - type: string
         name: id
         label: ID
-        description: 'A unique identifier used when filtering galleries'
+        description: "A unique identifier used when filtering galleries"
         required: true
       - type: string
         name: title
@@ -214,7 +214,7 @@ models:
         description: The excerpt of the page displayed in meta data
   post:
     type: page
-    urlPath: '/blog/{slug}'
+    urlPath: "/blog/{slug}"
     label: Post
     layout: post
     folder: blog
@@ -261,6 +261,14 @@ models:
         name: excerpt
         label: Excerpt
         description: The excerpt of the page displayed in the blog feed and meta data
+      - type: list
+        name: galleries
+        label: Galleries
+        description: The galleries of the post
+        items:
+          type: reference
+          models:
+            - gallery
   advanced:
     type: page
     label: Advanced Page
